--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.3",
+    "clsx": "^2.0.0",
     "next": "14.0.4",
-    "pokedex-promise-v2": "^4.1.1",
+    "pokenode-ts": "^1.20.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
